Issue #552 video modal title, spacing

--- a/web/themes/custom/gpw/src/components/courses/_course-sections.scss
+++ b/web/themes/custom/gpw/src/components/courses/_course-sections.scss
@@ -71,3 +71,7 @@
   }
 
 }
+
+.modal-body .field--name-field-video-duration {
+  margin-top: 1em;
+}
